fixed spacing

--- a/website/themes/blue/assets/sass/_base.scss
+++ b/website/themes/blue/assets/sass/_base.scss
@@ -409,7 +409,9 @@ hr {
 }
 .news-title-container {
   margin-bottom: 10px;
-  
+}
+.news-title-container.list > h1 {
+  margin-bottom: 0 !important;
 }
 
 .news-title-container > h1 > a:link,
@@ -428,8 +430,6 @@ hr {
 .news-title > a:hover {
   border-color: #fee18b;
 }
-
-
 
 .top-20 {
   margin-top: 20px; 
